--- a/src/components/shop.css
+++ b/src/components/shop.css
@@ -10,14 +10,11 @@
   justify-content: center;
   align-items: center;
   max-width: 700px;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 750px) {
-  #shop {
-    margin: 0 80px;
-  }
   #shop .products {
-    max-width: 1400px;
-    justify-content: start;
+    max-width: 75vw;
   }
 }
